<resources>
    <string name="app_name">Cloud Notes</string>
    <string name="register">Register</string>
    <string name="sign_in">Sign In</string>
    <string name="enter_email_here">Enter Email Here</string>
    <string name="enter_password_here">Enter Password Here</string>
    <string name="profile">Profile</string>
    <string name="logout">Logout</string>
    <string name="sign_up">Sign Up</string>
    <string name="display_name">Loading Display Name</string>
    <string name="update">Update</string>
    <string name="enter_name_here">Enter Name Here</string>
    <string name="add_new_data">+</string>
    <string name="add_task_here">Add Note Here</string>
    <string name="add">Add</string>
    <string name="delete">Delete</string>
    <string name="create_new_account">Create New Account</string>
    <string name="enter_new_note">Enter New Note</string>
    <string name="save">Save</string>
    <string name="save_your_notes_online">Save Your Notes Online</string>
    <string name="update_your_task">Update Your Note</string>
    <string name="update_profile">Update Profile</string>
    <string name="enter_your_display_name">Enter your Display Name</string>
    <string name="developer_contact">Developer Contact</string>
</resources>