<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".UpdateDataActivity">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:background="@drawable/design_start_activity"
        android:fontFamily="@font/gilda_display"
        android:gravity="center_horizontal"
        android:padding="7dp"
        android:text="@string/update_your_task"
        android:textColor="@color/white"
        android:textSize="21sp"
        android:textStyle="bold" />

    <EditText
        android:id="@+id/edit_text_task_update_activity"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginTop="32dp"
        android:layout_marginEnd="24dp"
        android:ems="10"
        android:importantForAutofill="no"
        android:inputType="textPersonName"
        android:padding="7dp"
        android:textSize="23sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:orientation="horizontal"
        android:padding="10dp"
        android:weightSum="2">

        <Button
            android:id="@+id/button_save_data_update_activity"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:layout_marginEnd="3dp"
            android:layout_weight="1"
            android:background="@drawable/button_ripple_click"
            android:fontFamily="@font/gilda_display"
            android:padding="15dp"
            android:text="@string/update"
            android:textAllCaps="false"
            android:textStyle="bold" />

        <Button
            android:id="@+id/button_delete_data_update_activity"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="3dp"
            android:layout_marginEnd="10dp"
            android:layout_weight="1"
            android:background="@drawable/button_ripple_click"
            android:fontFamily="@font/gilda_display"
            android:padding="15dp"
            android:text="@string/delete"
            android:textAllCaps="false"
            android:textStyle="bold" />


    </LinearLayout>
</LinearLayout>