<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".SigninActivity">


    <TextView
        android:id="@+id/text_view_heading_signin_activity"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:background="@drawable/design_start_activity"
        android:fontFamily="@font/gilda_display"
        android:gravity="center_horizontal"
        android:padding="7dp"
        android:text="@string/sign_in"
        android:textColor="@color/white"
        android:textSize="21sp"
        android:textStyle="bold" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="50dp"
        android:layout_marginBottom="50dp"
        android:orientation="vertical">

        <EditText
            android:id="@+id/edit_text_email_signin_activity"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="24dp"
            android:layout_marginTop="32dp"
            android:layout_marginEnd="24dp"
            android:drawableStart="@drawable/icon_email"
            android:drawablePadding="10dp"
            android:ems="10"
            android:hint="@string/enter_email_here"
            android:importantForAutofill="no"
            android:inputType="textEmailAddress"
            android:padding="7dp"
            android:textSize="23sp" />

        <EditText
            android:id="@+id/edit_text_password_signin_activity"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="24dp"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="24dp"
            android:drawableStart="@drawable/icon_secutity"
            android:drawablePadding="10dp"
            android:ems="10"
            android:hint="@string/enter_password_here"
            android:importantForAutofill="no"
            android:inputType="textPassword"
            android:padding="7dp"
            android:textSize="23sp" />

    </LinearLayout>

    <Button
        android:id="@+id/button_signin_signin_activity"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="20dp"
        android:background="@drawable/button_ripple_click"
        android:fontFamily="@font/el_messiri"
        android:padding="15dp"
        android:text="@string/sign_in"
        android:textAllCaps="false"
        android:textSize="26sp"
        android:textStyle="bold" />

</LinearLayout>