<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:weightSum="2"
    tools:context=".StartActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="1"
        android:background="@drawable/design_start_activity"
        android:orientation="vertical"
        android:padding="10dp"
        android:weightSum="2">

        <ImageView
            android:id="@+id/imageView"
            android:layout_width="160dp"
            android:layout_height="160dp"
            android:layout_gravity="center_horizontal"
            android:layout_weight="1"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:srcCompat="@drawable/noteslogo"
            tools:ignore="ContentDescription" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginLeft="20dp"
            android:layout_marginTop="10dp"
            android:layout_marginRight="20dp"
            android:layout_weight="1"
            android:gravity="center_horizontal"
            android:text="@string/save_your_notes_online"
            android:textStyle="italic|bold" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="1"
        android:orientation="horizontal"
        android:padding="10dp"
        android:weightSum="2">

        <Button
            android:id="@+id/button_register_main_activity"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:layout_marginEnd="3dp"
            android:layout_weight="1"
            android:background="@drawable/button_ripple_click"
            android:fontFamily="@font/el_messiri"
            android:padding="15dp"
            android:text="@string/register"
            android:textAllCaps="false"

            android:textSize="23sp"
            android:textStyle="bold" />

        <Button
            android:id="@+id/button_signin_main_activity"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:layout_marginStart="3dp"
            android:layout_weight="1"
            android:background="@drawable/button_ripple_click"
            android:fontFamily="@font/el_messiri"
            android:padding="15dp"
            android:text="@string/sign_in"
            android:textAllCaps="false"
            android:textSize="23sp"
            android:textStyle="bold" />


    </LinearLayout>
</LinearLayout>